# Paperfin

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md
backend/: .env.example  .gitignore  agentctl.sh  pyproject.toml  run.sh
backend/app/: __init__.py  config.py  db.py  main.py  pipeline.py
backend/app/api/: papers.py
backend/app/models/: __init__.py  author.py  institution.py  paper.py  subscription.py
backend/app/services/: __init__.py  llm.py  metadata_extractor.py  pdf_parser.py  quality.py  summarizer.py  url_ingest.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ImportDialog.tsx  PaperCard.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Library.tsx  PaperDetail.tsx
launchd/: ai.paperfin.backend.plist.template  ai.paperfin.frontend.plist.template
scripts/: install-launchagents.sh
